--- a/other-order.html
+++ b/other-order.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -43,8 +43,8 @@
 				<tr>
 					<th width="4%">序号</th>
 					<th width="8%">产品代码</th>
-					<th width="22%">产品名称</th>
-					<th width="16%">规格型号</th>
+					<th width="20%">产品名称</th>
+					<th width="18%">规格型号</th>
 					<th width="4%">单位</th>
 					<th width="6%">数量</th>
 					<th width="6%">单价</th>
@@ -65,52 +65,52 @@
 					<td>170705160700070</td>
 				</tr>
 				<tr>
-					<td>2</td>
-					<td>04.02.108</td>
-					<td>掌心爱301医院糖尿病多科学联合评估（挂号+陪诊+3个月诊后管理）</td>
-					<td>安糖套装机（血糖仪+25片试纸）+SIM卡1年</td>
-					<td>台</td>
-					<td>10000</td>
-					<td>10000.00</td>
-					<td>10000.00</td>
-					<td>CV170629172416001</td>
-					<td>170705160700070</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td>3</td>
-					<td>04.02.108</td>
-					<td>掌心爱301医院糖尿病多科学联合评估（挂号+陪诊+3个月诊后管理）</td>
-					<td>安糖套装机（血糖仪+25片试纸）+SIM卡1年</td>
-					<td>台</td>
-					<td>10000</td>
-					<td>10000.00</td>
-					<td>10000.00</td>
-					<td>CV170629172416001</td>
-					<td>170705160700070</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td>4</td>
-					<td>04.02.108</td>
-					<td>掌心爱301医院糖尿病多科学联合评估（挂号+陪诊+3个月诊后管理）</td>
-					<td>安糖套装机（血糖仪+25片试纸）+SIM卡1年</td>
-					<td>台</td>
-					<td>10000</td>
-					<td>10000.00</td>
-					<td>10000.00</td>
-					<td>CV170629172416001</td>
-					<td>170705160700070</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td>5</td>
-					<td>04.02.108</td>
-					<td>掌心爱301医院糖尿病多科学联合评估（挂号+陪诊+3个月诊后管理）</td>
-					<td>安糖套装机（血糖仪+25片试纸）+SIM卡1年</td>
-					<td>台</td>
-					<td>10000</td>
-					<td>10000.00</td>
-					<td>10000.00</td>
-					<td>CV170629172416001</td>
-					<td>170705160700070</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td colspan="5" class="page-total">本页小计：</td>
@@ -129,8 +129,13 @@
 					<div class="info-item">签收：</div>
 				</div>
 			</div>
+			<div class="order-tips">
+				<div class="order-tips-item">白联<br>:仓库</div>
+				<div class="order-tips-item">红联<br>:财务</div>
+				<div class="order-tips-item">黄联<br>:销售</div>
+			</div>
 		</div>
-		<div class="order-container storehouse-order">
+		<!-- <div class="order-container storehouse-order">
 			<div class="header-wrap order-line">
 				<div class="header-line company-name">福州康为网络技术有限公司</div>
 				<div class="header-line order-name">其他出库单</div>
@@ -252,7 +257,7 @@
 					<div class="info-item">签收：</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
